--- a/server/public/index.html
+++ b/server/public/index.html
@@ -328,7 +328,7 @@
                                         <td align="center" class="mcnButtonContent" style=" -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;
    font-family: 'Asap', Helvetica, sans-serif; font-size: 16px; padding-top:24px;
    padding-right:48px; padding-bottom:24px; padding-left:48px;" valign="middle">
-                                          <a class="mcnButton " href="TheLinkToReplaceFromToken" style="
+                                          <a class="mcnButton " href="http://localhost:3000/reset-password/ndubuisieze60@gmail.com/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6Im5kdWJ1aXNpZXplNjBAZ21haWwuY29tIiwidHlwZSI6ImFkbWluIiwiaWF0IjoxNjQ5NDM1MTA1LCJleHAiOjE2NDk0MzU3MDV9.Le_wFecSnEQ1A7pSMP2Klg1fOQd_Il0D7e8FUXZ13QI" style="
    -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; display: block; color: #f57153;
    font-weight: normal; text-decoration: none; font-weight: normal;letter-spacing:
    1px;line-height: 100%;text-align: center;text-decoration: none;color:
